--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -48,5 +48,5 @@ jobs:
           context: .
           dockerfile: Dockerfile
           push: false
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/rest-api:latest
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/like_toutiao_api:latest
 
