--- a/src/main/resources/application-dev.template.yml
+++ b/src/main/resources/application-dev.template.yml
@@ -1,11 +1,6 @@
 spring:
-  application:
-    name: toutiao-boot
-  # mysql
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://127.0.0.1:3306/dbname?useUnicode=true&characterEncoding=UTF-8&useSSL=false
     username: root
-    password: 123456
-  profiles:
-    active: dev
+    password: password
