--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -74,6 +74,6 @@ jobs:
         with:
           host: ${{ secrets.SSH_HOST }}
           port: ${{ secrets.SSH_PORT }}
-          user: ${{ secrets.SSH_USER }}
-          password: ${{ secrets.SSH_PASSWORD }}
+          user: ${{ secrets.SSH_PRIVATE_SECRET }}
+          key: ${{ secrets.SSH_PRIVATE_SECRET }}
           script: whoami
