--- a/src/main/resources/application-h2.yml
+++ b/src/main/resources/application-h2.yml
@@ -1,9 +1,11 @@
 spring:
   datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:isme;MODE=MySQL;DATABASE_TO_LOWER=TRUE
+    url: jdbc:p6spy:h2:mem:isme;MODE=MySQL;DATABASE_TO_LOWER=TRUE
     username: root
     password: 123456
+  h2:
+    console:
+      enabled: true
   sql:
     init:
       schema-locations: classpath:db/h2.sql
